# facturaview

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  index.html  package.json  pyproject.toml  railway.json  railway.toml  serve.json  vitest.config.js
backend/: __init__.py  main.py
backend/app/: __init__.py
backend/app/models/: __init__.py  response.py
backend/app/routes/: __init__.py  export.py  signature.py
backend/app/services/: __init__.py  excel_generator.py  validator.py
backend/tests/: __init__.py  test_export.py  test_signature.py
doc/: DISTRIBUTION.md  FACTURAVIEW_SPEC.md  ROADMAP.md  SEO.md
doc/tasks/: todo.md
frontend/: .env.example  index.html  package.json  vite.config.js
frontend/public/: about.html  faq.html  guia-facturae.html  serve.json  sitemap.xml
frontend/public/js/: static-i18n.js
frontend/src/: main.js  style.css
frontend/src/components/: BatchHeader.js  (+10 more)
frontend/tests/: batch-export.test.js  clipboard.test.js  errors.test.js  export.test.js  i18n.test.js  parser.test.js  storage.test.js  validators.test.js
public/: manifest.json  robots.txt  sitemap.xml  sw.js
scripts/: sign_fixtures.py
scripts/certs/: test_cert.pem
src/: main.js
src/components/: Dropzone.js  InvoiceView.js  LinesTable.js  PartyCard.js  TotalsBox.js
src/export/: toExcel.js  toPdf.js
src/parser/: facturae.js
src/utils/: discord.js  formatters.js  validators.js
tasks/: plan-mejoras-seo.md  plan-mejoras.md  todo.md
tests/: export.test.js  parser.test.js  security.test.js
tests/fixtures/: rectificativa.xml  simple-32.xml
(+21 files in other folders)
